crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__continue_inside_a_switch_reaches_the_enclosing_loops_header.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn count(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:19
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-5:16
    v3 = const.int 0  ; int
    ; stmt s2 @6:5-14:6
    jump bb1
  bb1:
    v4 = phi [bb0: v3, bb7: v8, bb5: v8]  ; int
    v5 = phi [bb0: v2, bb7: v12, bb5: v5]  ; int
    v6 = lt v4, v1  ; bool
    branch v6 -> bb2 (e0), bb3 (e1)
  bb2:
    ; stmt s3 @6:21-14:6
    ; stmt s4 @7:7-7:15
    v7 = const.int 1  ; int
    v8 = add v4, v7 ! bb4  ; int
    ; stmt s5 @8:7-13:8
    v9 = const.int 2  ; int
    v10 = eq v8, v9  ; bool
    branch v10 -> bb5 (e2), bb8 (e3)
  bb3:
    ; stmt s8 @15:5-15:18
    release v0
    return v5
  bb4:
    release v0
    propagate "count() at t.nvs:7"
  bb5:
    ; stmt s6 @10:11-10:20
    safepoint
    jump bb1
  bb6:
    ; stmt s7 @12:11-12:22
    v11 = const.int 1  ; int
    v12 = add v5, v11 ! bb9  ; int
    jump bb7
  bb7:
    safepoint
    jump bb1
  bb8:
    jump bb6
  bb9:
    release v0
    propagate "count() at t.nvs:12"
}
