crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__for_loop_runs_its_step_in_a_block_between_body_and_header.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn sum(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:20
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-5:16
    v3 = const.int 0  ; int
    ; stmt s2 @6:5-8:6
    v4 = const.int 0  ; int
    jump bb1
  bb1:
    v5 = phi [bb0: v2, bb3: v8]  ; int
    v6 = phi [bb0: v4, bb3: v10]  ; int
    v7 = lt v6, v1  ; bool
    branch v7 -> bb2 (e0), bb4 (e1)
  bb2:
    ; stmt s3 @6:36-8:6
    ; stmt s4 @7:7-7:20
    v8 = add v5, v6 ! bb5  ; int
    jump bb3
  bb3:
    v9 = const.int 1  ; int
    v10 = add v6, v9 ! bb6  ; int
    safepoint
    jump bb1
  bb4:
    ; stmt s5 @9:5-9:19
    release v0
    return v5
  bb5:
    release v0
    propagate "sum() at t.nvs:7"
  bb6:
    release v0
    propagate "sum() at t.nvs:7"
}
