crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__if_else_both_returning_leaves_a_dead_merge_block.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn abs(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-8:6
    v2 = const.int 0  ; int
    v3 = lt v1, v2  ; bool
    branch v3 -> bb2 (e0), bb3 (e1)
  bb1:
    release v0
    return
  bb2:
    ; stmt s1 @4:17-6:6
    ; stmt s2 @5:7-5:18
    v4 = neg v1 ! bb4  ; int
    release v0
    return v4
  bb3:
    ; stmt s3 @6:12-8:6
    ; stmt s4 @7:7-7:17
    release v0
    return v1
  bb4:
    release v0
    propagate "abs() at t.nvs:5"
}
