crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__if_else_merges_with_a_phi.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn pick(object, bool, int, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    v2 = param 2  ; int
    v3 = param 3  ; int
    ; stmt s0 @4:5-4:16
    v4 = const.int 0  ; int
    ; stmt s1 @5:5-9:6
    branch v1 -> bb2 (e0), bb3 (e1)
  bb1:
    v5 = phi [bb2: v2, bb3: v3]  ; int
    ; stmt s6 @10:5-10:15
    release v0
    return v5
  bb2:
    ; stmt s2 @5:13-7:6
    ; stmt s3 @6:7-6:15
    jump bb1
  bb3:
    ; stmt s4 @7:12-9:6
    ; stmt s5 @8:7-8:15
    jump bb1
}
