crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__if_with_no_else_merges_the_implicit_edge.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn clamp(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:17
    ; stmt s1 @5:5-7:6
    v2 = const.int 0  ; int
    v3 = lt v1, v2  ; bool
    branch v3 -> bb2 (e0), bb1 (e1)
  bb1:
    v5 = phi [bb2: v4, bb0: v1]  ; int
    ; stmt s4 @8:5-8:15
    release v0
    return v5
  bb2:
    ; stmt s2 @5:17-7:6
    ; stmt s3 @6:7-6:14
    v4 = const.int 0  ; int
    jump bb1
}
